// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Modal renders with customStyle 1`] = `
<DocumentFragment>
  <div
    aria-hidden="true"
    class="__reakit-focus-trap"
    style="position: fixed;"
    tabindex="0"
  />
  .cache-u8dom6-StyledDialogBackdrop-customDialogBackdropStyles {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: fixed;
  overflow: auto;
  padding: 16px;
  top: 0;
  bottom: 0;
  right: 0;
  left: 0;
  opacity: 1;
  background-color: #4A4F62A6;
  background-color: aliceblue;
}

.cache-1ikjhs4-StyledDialog-customDialogStyles {
  background-color: #ffffff;
  position: relative;
  border-radius: 4px;
  border: 0;
  padding: 32px;
  margin: auto;
  width: 616px;
  min-height: initial;
  box-shadow: 0px 8px 40px 10px #151A2D5C;
  opacity: 1;
  background: radial-gradient(circle, #8b2fe6 0%, #4f0599 50%, #30015a 100%);
}

.cache-1ikjhs4-StyledDialog-customDialogStyles::before {
  content: '';
  height: 100%;
  width: 100%;
}

.cache-v3mj59-StyledContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: end;
  -ms-flex-pack: end;
  -webkit-justify-content: flex-end;
  justify-content: flex-end;
  position: absolute;
  top: 16px;
  right: 16px;
  left: 16px;
}

.cache-13fr1so-StyledButton-StyledButton {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
  background-color: transparent;
  color: #4a4f62;
  width: 32px;
  height: 32px;
  padding: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.cache-13fr1so-StyledButton-StyledButton:hover,
.cache-13fr1so-StyledButton-StyledButton:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-13fr1so-StyledButton-StyledButton>svg {
  pointer-events: none;
}

.cache-1cny8u7-StyledIconContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  pointer-events: none;
}

.cache-ahx3oi-StyledIcon-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 20px;
  width: 20px;
  min-width: 20px;
  min-height: 20px;
}

<div
    class="__reakit-portal"
  >
    <div
      class="cache-u8dom6-StyledDialogBackdrop-customDialogBackdropStyles e1x6rvve2"
      data-dialog-ref="id-d9i348"
    >
      <div
        aria-label="modal"
        aria-modal="true"
        class="cache-1ikjhs4-StyledDialog-customDialogStyles e1x6rvve1"
        data-dialog="true"
        id="id-d9i348"
        role="dialog"
        tabindex="-1"
      >
        <div>
          test
        </div>
        <div
          class="cache-v3mj59-StyledContainer e1x6rvve0"
        >
          <button
            aria-disabled="false"
            class="cache-13fr1so-StyledButton-StyledButton em6gco80"
            title="close"
            type="button"
          >
            <div
              class="cache-1cny8u7-StyledIconContainer em6gco81"
            >
              <svg
                class="cache-ahx3oi-StyledIcon-sizeStyles etwatq50"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19,6.41L17.59,5L12,10.59L6.41,5L5,6.41L10.59,12L5,17.59L6.41,19L12,13.41L17.59,19L19,17.59L13.41,12L19,6.41Z"
                />
              </svg>
            </div>
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    aria-hidden="true"
    class="__reakit-focus-trap"
    style="position: fixed;"
    tabindex="0"
  />
</DocumentFragment>
`;

exports[`Modal renders with default Props 1`] = `
<DocumentFragment>
  .cache-16xmv7g-StyledDialogBackdrop {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: fixed;
  overflow: auto;
  padding: 16px;
  top: 0;
  bottom: 0;
  right: 0;
  left: 0;
  opacity: 1;
  background-color: #4A4F62A6;
}

.cache-lw1g3t-StyledDialog {
  background-color: #ffffff;
  position: relative;
  border-radius: 4px;
  border: 0;
  padding: 32px;
  margin: auto;
  width: 616px;
  min-height: initial;
  box-shadow: 0px 8px 40px 10px #151A2D5C;
  opacity: 1;
}

.cache-lw1g3t-StyledDialog::before {
  content: '';
  height: 100%;
  width: 100%;
}

.cache-v3mj59-StyledContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: end;
  -ms-flex-pack: end;
  -webkit-justify-content: flex-end;
  justify-content: flex-end;
  position: absolute;
  top: 16px;
  right: 16px;
  left: 16px;
}

.cache-13fr1so-StyledButton-StyledButton {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
  background-color: transparent;
  color: #4a4f62;
  width: 32px;
  height: 32px;
  padding: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.cache-13fr1so-StyledButton-StyledButton:hover,
.cache-13fr1so-StyledButton-StyledButton:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-13fr1so-StyledButton-StyledButton>svg {
  pointer-events: none;
}

.cache-1cny8u7-StyledIconContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  pointer-events: none;
}

.cache-ahx3oi-StyledIcon-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 20px;
  width: 20px;
  min-width: 20px;
  min-height: 20px;
}

<div
    class="__reakit-portal"
  >
    <div
      class="cache-16xmv7g-StyledDialogBackdrop e1x6rvve2"
      data-dialog-ref="id-d9i348"
      hidden=""
      style="display: none;"
    >
      <div
        aria-label="modal"
        aria-modal="true"
        class="cache-lw1g3t-StyledDialog e1x6rvve1"
        data-dialog="true"
        hidden=""
        id="id-d9i348"
        role="dialog"
        style="display: none;"
        tabindex="-1"
      >
        <div
          class="cache-v3mj59-StyledContainer e1x6rvve0"
        >
          <button
            aria-disabled="false"
            class="cache-13fr1so-StyledButton-StyledButton em6gco80"
            title="close"
            type="button"
          >
            <div
              class="cache-1cny8u7-StyledIconContainer em6gco81"
            >
              <svg
                class="cache-ahx3oi-StyledIcon-sizeStyles etwatq50"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19,6.41L17.59,5L12,10.59L6.41,5L5,6.41L10.59,12L5,17.59L6.41,19L12,13.41L17.59,19L19,17.59L13.41,12L19,6.41Z"
                />
              </svg>
            </div>
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Modal renders with disclosure 1`] = `
<DocumentFragment>
  <button
    aria-controls="modal-test"
    aria-expanded="false"
    aria-haspopup="dialog"
    type="button"
  >
    Test
  </button>
  .cache-16xmv7g-StyledDialogBackdrop {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: fixed;
  overflow: auto;
  padding: 16px;
  top: 0;
  bottom: 0;
  right: 0;
  left: 0;
  opacity: 1;
  background-color: #4A4F62A6;
}

.cache-lw1g3t-StyledDialog {
  background-color: #ffffff;
  position: relative;
  border-radius: 4px;
  border: 0;
  padding: 32px;
  margin: auto;
  width: 616px;
  min-height: initial;
  box-shadow: 0px 8px 40px 10px #151A2D5C;
  opacity: 1;
}

.cache-lw1g3t-StyledDialog::before {
  content: '';
  height: 100%;
  width: 100%;
}

.cache-v3mj59-StyledContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: end;
  -ms-flex-pack: end;
  -webkit-justify-content: flex-end;
  justify-content: flex-end;
  position: absolute;
  top: 16px;
  right: 16px;
  left: 16px;
}

.cache-13fr1so-StyledButton-StyledButton {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
  background-color: transparent;
  color: #4a4f62;
  width: 32px;
  height: 32px;
  padding: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.cache-13fr1so-StyledButton-StyledButton:hover,
.cache-13fr1so-StyledButton-StyledButton:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-13fr1so-StyledButton-StyledButton>svg {
  pointer-events: none;
}

.cache-1cny8u7-StyledIconContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  pointer-events: none;
}

.cache-ahx3oi-StyledIcon-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 20px;
  width: 20px;
  min-width: 20px;
  min-height: 20px;
}

<div
    class="__reakit-portal"
  >
    <div
      class="cache-16xmv7g-StyledDialogBackdrop e1x6rvve2"
      data-dialog-ref="modal-test"
      hidden=""
      style="display: none;"
    >
      <div
        aria-label="modal-test"
        aria-modal="true"
        class="cache-lw1g3t-StyledDialog e1x6rvve1"
        data-dialog="true"
        hidden=""
        id="modal-test"
        role="dialog"
        style="display: none;"
        tabindex="-1"
      >
        <div
          class="cache-v3mj59-StyledContainer e1x6rvve0"
        >
          <button
            aria-disabled="false"
            class="cache-13fr1so-StyledButton-StyledButton em6gco80"
            title="close"
            type="button"
          >
            <div
              class="cache-1cny8u7-StyledIconContainer em6gco81"
            >
              <svg
                class="cache-ahx3oi-StyledIcon-sizeStyles etwatq50"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19,6.41L17.59,5L12,10.59L6.41,5L5,6.41L10.59,12L5,17.59L6.41,19L12,13.41L17.59,19L19,17.59L13.41,12L19,6.41Z"
                />
              </svg>
            </div>
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Modal renders with disclosure and onBeforeClose 1`] = `
<DocumentFragment>
  <button
    aria-controls="modal-test"
    aria-expanded="false"
    aria-haspopup="dialog"
    type="button"
  >
    Test modal-test
  </button>
  <div
    aria-hidden="true"
    class="__reakit-focus-trap"
    style="position: fixed;"
    tabindex="0"
  />
  .cache-16xmv7g-StyledDialogBackdrop {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: fixed;
  overflow: auto;
  padding: 16px;
  top: 0;
  bottom: 0;
  right: 0;
  left: 0;
  opacity: 1;
  background-color: #4A4F62A6;
}

.cache-lw1g3t-StyledDialog {
  background-color: #ffffff;
  position: relative;
  border-radius: 4px;
  border: 0;
  padding: 32px;
  margin: auto;
  width: 616px;
  min-height: initial;
  box-shadow: 0px 8px 40px 10px #151A2D5C;
  opacity: 1;
}

.cache-lw1g3t-StyledDialog::before {
  content: '';
  height: 100%;
  width: 100%;
}

.cache-v3mj59-StyledContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: end;
  -ms-flex-pack: end;
  -webkit-justify-content: flex-end;
  justify-content: flex-end;
  position: absolute;
  top: 16px;
  right: 16px;
  left: 16px;
}

.cache-13fr1so-StyledButton-StyledButton {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
  background-color: transparent;
  color: #4a4f62;
  width: 32px;
  height: 32px;
  padding: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.cache-13fr1so-StyledButton-StyledButton:hover,
.cache-13fr1so-StyledButton-StyledButton:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-13fr1so-StyledButton-StyledButton>svg {
  pointer-events: none;
}

.cache-1cny8u7-StyledIconContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  pointer-events: none;
}

.cache-ahx3oi-StyledIcon-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 20px;
  width: 20px;
  min-width: 20px;
  min-height: 20px;
}

<div
    class="__reakit-portal"
  >
    <div
      class="cache-16xmv7g-StyledDialogBackdrop e1x6rvve2"
      data-dialog-ref="modal-test"
      style=""
    >
      <div
        aria-label="modal-test"
        aria-modal="true"
        class="cache-lw1g3t-StyledDialog e1x6rvve1"
        data-dialog="true"
        id="modal-test"
        role="dialog"
        style=""
        tabindex="-1"
      >
        <div>
          modal
        </div>
        <div
          class="cache-v3mj59-StyledContainer e1x6rvve0"
        >
          <button
            aria-disabled="false"
            class="cache-13fr1so-StyledButton-StyledButton em6gco80"
            title="close"
            type="button"
          >
            <div
              class="cache-1cny8u7-StyledIconContainer em6gco81"
            >
              <svg
                class="cache-ahx3oi-StyledIcon-sizeStyles etwatq50"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19,6.41L17.59,5L12,10.59L6.41,5L5,6.41L10.59,12L5,17.59L6.41,19L12,13.41L17.59,19L19,17.59L13.41,12L19,6.41Z"
                />
              </svg>
            </div>
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    aria-hidden="true"
    class="__reakit-focus-trap"
    style="position: fixed;"
    tabindex="0"
  />
</DocumentFragment>
`;

exports[`Modal renders with opened={true} 1`] = `
<DocumentFragment>
  <div
    aria-hidden="true"
    class="__reakit-focus-trap"
    style="position: fixed;"
    tabindex="0"
  />
  .cache-16xmv7g-StyledDialogBackdrop {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: fixed;
  overflow: auto;
  padding: 16px;
  top: 0;
  bottom: 0;
  right: 0;
  left: 0;
  opacity: 1;
  background-color: #4A4F62A6;
}

.cache-lw1g3t-StyledDialog {
  background-color: #ffffff;
  position: relative;
  border-radius: 4px;
  border: 0;
  padding: 32px;
  margin: auto;
  width: 616px;
  min-height: initial;
  box-shadow: 0px 8px 40px 10px #151A2D5C;
  opacity: 1;
}

.cache-lw1g3t-StyledDialog::before {
  content: '';
  height: 100%;
  width: 100%;
}

.cache-v3mj59-StyledContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: end;
  -ms-flex-pack: end;
  -webkit-justify-content: flex-end;
  justify-content: flex-end;
  position: absolute;
  top: 16px;
  right: 16px;
  left: 16px;
}

.cache-13fr1so-StyledButton-StyledButton {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
  background-color: transparent;
  color: #4a4f62;
  width: 32px;
  height: 32px;
  padding: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.cache-13fr1so-StyledButton-StyledButton:hover,
.cache-13fr1so-StyledButton-StyledButton:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-13fr1so-StyledButton-StyledButton>svg {
  pointer-events: none;
}

.cache-1cny8u7-StyledIconContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  pointer-events: none;
}

.cache-ahx3oi-StyledIcon-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 20px;
  width: 20px;
  min-width: 20px;
  min-height: 20px;
}

<div
    class="__reakit-portal"
  >
    <div
      class="cache-16xmv7g-StyledDialogBackdrop e1x6rvve2"
      data-dialog-ref="id-d9i348"
    >
      <div
        aria-label="modal"
        aria-modal="true"
        class="cache-lw1g3t-StyledDialog e1x6rvve1"
        data-dialog="true"
        id="id-d9i348"
        role="dialog"
        tabindex="-1"
      >
        <div>
          test
        </div>
        <div
          class="cache-v3mj59-StyledContainer e1x6rvve0"
        >
          <button
            aria-disabled="false"
            class="cache-13fr1so-StyledButton-StyledButton em6gco80"
            title="close"
            type="button"
          >
            <div
              class="cache-1cny8u7-StyledIconContainer em6gco81"
            >
              <svg
                class="cache-ahx3oi-StyledIcon-sizeStyles etwatq50"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19,6.41L17.59,5L12,10.59L6.41,5L5,6.41L10.59,12L5,17.59L6.41,19L12,13.41L17.59,19L19,17.59L13.41,12L19,6.41Z"
                />
              </svg>
            </div>
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    aria-hidden="true"
    class="__reakit-focus-trap"
    style="position: fixed;"
    tabindex="0"
  />
</DocumentFragment>
`;

exports[`Modal renders with portal node (modal=false) 1`] = `
<DocumentFragment>
  .cache-16xmv7g-StyledDialogBackdrop {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: fixed;
  overflow: auto;
  padding: 16px;
  top: 0;
  bottom: 0;
  right: 0;
  left: 0;
  opacity: 1;
  background-color: #4A4F62A6;
}

.cache-lw1g3t-StyledDialog {
  background-color: #ffffff;
  position: relative;
  border-radius: 4px;
  border: 0;
  padding: 32px;
  margin: auto;
  width: 616px;
  min-height: initial;
  box-shadow: 0px 8px 40px 10px #151A2D5C;
  opacity: 1;
}

.cache-lw1g3t-StyledDialog::before {
  content: '';
  height: 100%;
  width: 100%;
}

.cache-v3mj59-StyledContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: end;
  -ms-flex-pack: end;
  -webkit-justify-content: flex-end;
  justify-content: flex-end;
  position: absolute;
  top: 16px;
  right: 16px;
  left: 16px;
}

.cache-13fr1so-StyledButton-StyledButton {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
  background-color: transparent;
  color: #4a4f62;
  width: 32px;
  height: 32px;
  padding: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.cache-13fr1so-StyledButton-StyledButton:hover,
.cache-13fr1so-StyledButton-StyledButton:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-13fr1so-StyledButton-StyledButton>svg {
  pointer-events: none;
}

.cache-1cny8u7-StyledIconContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  pointer-events: none;
}

.cache-ahx3oi-StyledIcon-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 20px;
  width: 20px;
  min-width: 20px;
  min-height: 20px;
}

<div
    class="cache-16xmv7g-StyledDialogBackdrop e1x6rvve2"
    data-dialog-ref="modal-test"
    hidden=""
    style="display: none;"
  >
    <div
      aria-label="modal-test"
      class="cache-lw1g3t-StyledDialog e1x6rvve1"
      data-dialog="true"
      hidden=""
      id="modal-test"
      role="dialog"
      style="display: none;"
      tabindex="-1"
    >
      <div
        class="cache-v3mj59-StyledContainer e1x6rvve0"
      >
        <button
          aria-disabled="false"
          class="cache-13fr1so-StyledButton-StyledButton em6gco80"
          title="close"
          type="button"
        >
          <div
            class="cache-1cny8u7-StyledIconContainer em6gco81"
          >
            <svg
              class="cache-ahx3oi-StyledIcon-sizeStyles etwatq50"
              viewBox="0 0 24 24"
            >
              <path
                d="M19,6.41L17.59,5L12,10.59L6.41,5L5,6.41L10.59,12L5,17.59L6.41,19L12,13.41L17.59,19L19,17.59L13.41,12L19,6.41Z"
              />
            </svg>
          </div>
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
